src/objects/echosign_dev1__SIGN_AgreementEvent__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Acting_User_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acting User Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Acting_User_Ip_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acting User IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Comment2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Days_Ago__c</fullName>
        <formula>now() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Ago</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Version_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Version Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CREATED</fullName>
                </value>
                <value>
                    <fullName>UPLOADED_BY_SENDER</fullName>
                </value>
                <value>
                    <fullName>FAXED_BY_SENDER</fullName>
                </value>
                <value>
                    <fullName>AGREEMENT_MODIFIED</fullName>
                </value>
                <value>
                    <fullName>USER_ACK_AGREEMENT_MODIFIED</fullName>
                </value>
                <value>
                    <fullName>PRESIGNED</fullName>
                </value>
                <value>
                    <fullName>SIGNED</fullName>
                </value>
                <value>
                    <fullName>WRITTEN_SIGNED</fullName>
                </value>
                <value>
                    <fullName>ESIGNED</fullName>
                </value>
                <value>
                    <fullName>DIGSIGNED</fullName>
                </value>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>ACCEPTED</fullName>
                </value>
                <value>
                    <fullName>DELIVERED</fullName>
                </value>
                <value>
                    <fullName>FORM_FILLED</fullName>
                </value>
                <value>
                    <fullName>OFFLINE_SYNC</fullName>
                </value>
                <value>
                    <fullName>FAXIN_RECEIVED</fullName>
                </value>
                <value>
                    <fullName>SIGNATURE_REQUESTED</fullName>
                </value>
                <value>
                    <fullName>APPROVAL_REQUESTED</fullName>
                </value>
                <value>
                    <fullName>ACCEPTANCE_REQUESTED</fullName>
                </value>
                <value>
                    <fullName>ACKNOWLEDGEMENT_REQUESTED</fullName>
                </value>
                <value>
                    <fullName>FORM_FILLING_REQUESTED</fullName>
                </value>
                <value>
                    <fullName>RECALLED</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                </value>
                <value>
                    <fullName>EXPIRED_AUTOMATICALLY</fullName>
                </value>
                <value>
                    <fullName>SHARED</fullName>
                </value>
                <value>
                    <fullName>EMAIL_VIEWED</fullName>
                </value>
                <value>
                    <fullName>AUTO_CANCELLED_CONVERSION_PROBLEM</fullName>
                </value>
                <value>
                    <fullName>SIGNER_SUGGESTED_CHANGES</fullName>
                </value>
                <value>
                    <fullName>SENDER_CREATED_NEW_REVISION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__Participant_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Participant Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>echosign_dev1__SIGN_Recipients__c</referenceTo>
        <relationshipLabel>Agreement Events</relationshipLabel>
        <relationshipName>Agreement_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__SIGN_Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Events</relationshipLabel>
        <relationshipName>Name</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <formula>IF(
  CONTAINS( LOWER(echosign_dev1__Description__c) , &quot;sent out for signature to&quot;), 
  &quot;SENT&quot;, 
IF(
  CONTAINS( LOWER(echosign_dev1__Description__c) , &quot;sent out for approval to&quot;), 
  &quot;SENT FOR APPROVAL&quot;,
IF(
  CONTAINS( LOWER(echosign_dev1__Description__c) , &quot;sent out for acceptance to&quot;), 
  &quot;SENT FOR ACCEPTANCE&quot;,
IF(
  CONTAINS( LOWER(echosign_dev1__Description__c) , &quot;sent out for filling to&quot;) || CONTAINS( LOWER(echosign_dev1__Description__c) , &quot;sent out for form filling to&quot;), 
  &quot;SENT FOR FORM-FILLING&quot;,
IF(
  CONTAINS( LOWER(echosign_dev1__Description__c) , &quot;sent out for delivery to&quot;) || CONTAINS( LOWER(echosign_dev1__Description__c) , &quot;sent out for acknowledgement to&quot;), 
  &quot;SENT FOR DELIVERY&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;signed by&quot;),
  &quot;SIGNED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;approved by&quot;),
  &quot;APPROVED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;accepted by&quot;),
  &quot;ACCEPTED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;filled by&quot;),
  &quot;FORM-FILLED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;delivered by&quot;) || CONTAINS( echosign_dev1__Description__c , &quot;acknowledged by&quot;),
  &quot;DELIVERED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;viewed by&quot;),
  &quot;VIEWED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;created by&quot;),
  &quot;CREATED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;cancelled by&quot;) || CONTAINS( echosign_dev1__Description__c , &quot;canceled by&quot;),
  &quot;CANCELLED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;declined by&quot;),
  &quot;DECLINED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;email bounced and could not be delivered to&quot; )|| CONTAINS( echosign_dev1__Description__c , &quot;Email bounced and was not delivered to&quot;),
  &quot;BOUNCED&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;reminder sent to&quot;),
  &quot;REMINDER&quot;,
IF(
  CONTAINS( echosign_dev1__Description__c , &quot;expired&quot;),
  &quot;EXPIRED&quot;,
&quot;OTHER&quot;)))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Agreement Event</label>
    <listViews>
        <fullName>echosign_dev1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E{000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>